--- a/registrationForm/index.html
+++ b/registrationForm/index.html
@@ -35,7 +35,7 @@
         </select>
         </p>
 
-        <p><input type="checkbox"> Yes, I would Like to  receive periosic email updates</p>
+        <p><input type="checkbox"> Yes, I would Like to  receive periodic email updates</p>
         <p><input type="submit" value="Create Account"></p>
         <p>* Indicates required field</p>
     </div>
