complete per instructions. 1 vidoeo in place

--- a/video-preview/index.html
+++ b/video-preview/index.html
@@ -28,15 +28,15 @@
 
             <!-- this is a placeholder replace it with a real video -->
             <div class="videoHolder">
-                <video controls>
-                    <source scr="industrialAir.mp4">
+                <video controls onmouseover="this.play()", onmouseout="this.pause()">
+                    <source src="industrialAir.mp4">
                 </video> 
             </div>
 
             <!-- video info -->
             <div class="row">
                 <div class="start">
-                    <h1>Example Video Title</h1>
+                    <h1>Industrial America From the Air</h1>
                     <h3>1.3K Views | June, 18, 2021</h3>
                     <div class="user">
                         <img src="assets/user.png" alt="user-circle" class="avatar-s">
